Avoid overflow x

--- a/frontend/src/app/pages/track-list-page/track-list-page.component.scss
+++ b/frontend/src/app/pages/track-list-page/track-list-page.component.scss
@@ -10,6 +10,7 @@
 .track-button {
   padding: 0;
   border-radius: 0;
+  min-width: 0;
 }
 
 .track-button.disabled {
